--- a/src/Components/Player-2/index.scss
+++ b/src/Components/Player-2/index.scss
@@ -1,8 +1,29 @@
-.player__enemy {
-  height: 250px;
-  width: 250px;
-  font-size: 25px;
-  border-radius: 25px;
-  border: 2px solid black;
-  background-color: rgba(255, 0, 0, 0.686);
+.player-2 {
+  .player__name {
+    font-size: 25px;
+    font-family: "Courier New", Courier, monospace;
+    text-align: center;
+    color: rgba(142, 238, 228, 0.749);
+  }
+  .player__enemy {
+    height: 250px;
+    width: 250px;
+    font-size: 25px;
+    border-radius: 25px;
+    border: 2px solid rgb(228, 120, 58);
+    background-color: rgba(186, 199, 186, 0.406);
+  }
+  .player__block {
+    font-size: 25px;
+    font-family: "Courier New", Courier, monospace;
+    text-align: center;
+    .player__text {
+      display: inline-block;
+      color: rgba(142, 238, 228, 0.749);
+    }
+    .player__health {
+      display: inline-block;
+      color: rgb(255, 255, 255);
+    }
+  }
 }
