Переход на vite, добавление ts

--- a/src/App/index.scss
+++ b/src/App/index.scss
@@ -11,10 +11,8 @@
     justify-content: center;
     height: 600px;
     flex-direction: row;
-    background: url("../Images/forest.png");
+    background: url("/forest.png");
     background-repeat: no-repeat;
     background-size: cover;
-  }
-  .app__keyboard {
   }
 }
